[fix] an event card should lose high z-index after growing and shrinking effect

--- a/bang.css
+++ b/bang.css
@@ -569,6 +569,7 @@ div#xIcon {
   animation-duration: 3s;
   animation-name: grow;
   animation-iteration-count: 1;
+  z-index: 100;
 }
 
 @keyframes grow {
