--- a/modules/css/table.scss
+++ b/modules/css/table.scss
@@ -110,6 +110,7 @@ div#xIcon {
   animation-duration: 3s;
   animation-name: grow;
   animation-iteration-count: 1;
+  z-index: 100;
 }
 
 @keyframes grow {
